--- a/landing page/homepage/style.css
+++ b/landing page/homepage/style.css
@@ -90,3 +90,14 @@ footer {
   color: #fff;
   border-radius: 8px;
 }
+
+h3 {
+  text-align: center;
+  margin-top: 20px;
+  color: #444;
+}
+
+audio {
+  display: block;
+  margin: 20px auto;
+}
